--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,20 +1,21 @@
 site_name: Libro online de IAAR
 pages:
-    - Inteligencia Artificial: index.md
+    - Introducción: index.md
+    - Inteligencia Artificial: inteligencia-artificial.md
     - Deep Learning: deeplearning.md
-    - Machine Learning: ML.md
+    - Machine Learning: machine-learning.md
     - Ciencia de datos: datascience.md
     - Big Data: bigdata.md
     - Internet de las cosas: internet-de-las-cosas.md
-    - Procesamiento de lenguaje: NLP.md
+    - Procesamiento de lenguaje: procesamiento-del-lenguaje-natural.md
     - Intro Python: python.md
     - Intro R: rlang.md
     - Bibliografía: bibliografia.md
     - Glosario: glosario.md
     - Recursos: recursos.md
-    - Sobre IAAR: about.md
+    - Sobre IAAR: sobre-iaar.md
     - Sobre el autor: autor.md
-    - Contacto: contact.md
+    - Contacto: contacto.md
 theme: readthedocs
 site_url: https://iaarbook.github.io/
 site_description: 'Libro online de la comunidad de Inteligencia Artificial Argentina IAAR'
